--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <div id='nav'>
       <h2>Project Page</h2>
     </div>
-    <div id='login-div'>
+    <form id='form-el'>
+      <div id='login-div'>
       <p>Enter your user-name and password</p>
-      <input id='user' name='user' placeholder='user-name' type='text'/>
-      <input id='password' name='password' placeholder='password' type='password'/>
-      <div>
-        <button>Register</button>
-        <button>Log in</button>
+        <input id='user' name='user' placeholder='user-name' type='text'required/>
+        <input id='password' name='password' placeholder='password' type='password'required/>
+        <div>
+          <button id='register-btn'>Register</button>
+          <button type='submit'>Log in</button>
+        </div
       </div>
-    </div>
+    </form>
     <script src='app.js'></script>
   </body>
 </html>
