--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     </div>
     <form id='form-el'>
       <div id='login-div'>
-      <p>Enter your user-name and password</p>
+      <p id='welcome'>Enter your user-name and password</p>
         <input id='user' name='user' placeholder='user-name' type='text'required/>
         <input id='password' name='password' placeholder='password' type='password'required/>
         <div>
@@ -19,6 +19,6 @@
         </div
       </div>
     </form>
-    <script src='app.js'></script>
+    <script src='login.js' type='module'></script>
   </body>
 </html>
