worked on main page and added writer page

--- a/mainPage.html
+++ b/mainPage.html
@@ -9,6 +9,15 @@
     <div id='main'>
       <h2>Welcome to the main page!<h2>
     </div>
+    <div id='container'>
+      <div id='writer'>
+        <img class='image' src='images/writer.jpeg' alt='writing machine'/>
+      </div>
+      <div id='mage'>
+        <img class='image' src='images/mage.gif' alt='a mage and cards and candles'/>
+      </div>
+    </div>
+    <h3>Choose what you want to do!</h3>
     <script src='main.js' type='module'></script>
   </body>
 </html>
