navigation and logout, text save

--- a/mainPage.html
+++ b/mainPage.html
@@ -5,7 +5,10 @@
     <title>Main Page</title>
   </head>
   <body>
-    <p id='login-name-el'></p>
+    <div id='nav-right'>
+      <p id='login-name-el'></p>
+      <button id='logout-btn'>Log out</button>
+    </div>
     <div id='main'>
       <h2>Welcome to the main page!<h2>
     </div>
