--- a/writer.html
+++ b/writer.html
@@ -5,13 +5,19 @@
     <link rel='stylesheet' href='styles3.css'/>
   </head>
   <body>
-    <p id='login-name-el'></p>
+    <div id='nav'>
+      <p id='login-name-el'></p>
+      <p id='go-back'>Go back to:
+        <a href='http://127.0.0.1:3000/a_p1/mainPage.html'>Main page</a>
+      </p<
+    </div>
     <div id='main'>
       <h2>Write down your thoughts!<h2>
     </div>
     <div>
       <textarea id='text-area' rows='30' cols='200'></textarea>
     </div>
+    <button id='save'>Save your thoughts!</button>
     <script src='writer.js' type='module'></script>
   </body>
 </html>
