--- a/writer.html
+++ b/writer.html
@@ -18,6 +18,7 @@
       <textarea id='text-area' rows='30' cols='200'></textarea>
     </div>
     <button id='save'>Save your thoughts!</button>
+    <button id='load'>Resume your last entry</button>
     <script src='writer.js' type='module'></script>
   </body>
 </html>
