--- a/writer.html
+++ b/writer.html
@@ -8,7 +8,7 @@
     <div id='nav'>
       <p id='login-name-el'></p>
       <p id='go-back'>Go back to:
-        <a href='http://127.0.0.1:3000/p1/mainPage.html'>Main page</a>
+        <a href='https://adomasr.github.io/Project/mainPage.html'>Main page</a>
       </p<
     </div>
     <div id='main'>
